# estudando-playwrite

./: README.md  pyproject.toml
estudando_playwright/: app.py
