[tool.poetry]
name = "estudando-playwrite"
version = "0.1.0"
description = ""
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "estudando_playwright"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.31.1"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
